--- a/.github/workflows/build-10.yml
+++ b/.github/workflows/build-10.yml
@@ -1,95 +1,99 @@
 name: build
-run-name: Build ${{ inputs.versions }}
+run-name: "Build Windows 11 24H2 + Windows 10 22H2"
 
 on:
-  workflow_dispatch:
-    inputs:
-      versions:
-        description: "Windows version to build"
-        type: choice
-        options:
-        - Windows 11 24H2
-        - Windows 11 23H2
-        - Windows 10 22H2
-        default: Windows 11 24H2
-        required: true
+  workflow_dispatch: {}  # 空配置表示手动触发但不提供选项
+  schedule:
+    # 每周一凌晨3点自动构建 (UTC时间)
+    - cron: '0 3 * * 1'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: false
 
 jobs:
-  build:
+  build-windows:
     runs-on: windows-2022
+    strategy:
+      matrix:
+        version: ['Windows-11-24H2', 'Windows-10-22H2']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Log the available disk space, so we can inspect it later.
-      # NB GitHub-hosted runners have limited available disk space.
-      #    see https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources
-      - name: Show available disk space before build
+      # 显示磁盘空间
+      - name: Show available disk space before build (${{ matrix.version }})
         run: Get-PSDrive -PSProvider FileSystem
 
-      # NB we are writing outside of the current working/job directory
-      #    because it does not have sufficient available disk space.
-      - name: Build Windows 11 24H2
-        if: ${{ inputs.versions == 'Windows 11 24H2' }}
-        run: pwsh uup-dump-get-windows-iso.ps1 windows-11 c:/output
-
-      - name: Build Windows 11 23H2
-        if: ${{ inputs.versions == 'Windows 11 23H2' }}
-        run: pwsh uup-dump-get-windows-iso.ps1 windows-11old c:/output
-
-      - name: Build Windows 10 22H2
-        if: ${{ inputs.versions == 'Windows 10 22H2' }}
-        run: pwsh uup-dump-get-windows-iso.ps1 windows-10 c:/output
-
-      - name: Show available disk space after build
-        run: Get-PSDrive -PSProvider FileSystem
-
-      - name: Upload artifact
-        id: upload_artifact
-        uses: actions/upload-artifact@v4
-        # env:
-        #  ISO_NAME: ${{ steps.build.outputs.ISO_NAME }}
-        with:
-          name: ${{ env.ISO_NAME }}
-          path: c:/output/*.ISO
-          if-no-files-found: error 
-      
-      - name: Set artifact_url
-        id: set_artifact_url
-        run: echo "artifact_url=${{ steps.upload_artifact.outputs.artifact-url }}" >> $env:GITHUB_ENV
-        
-      - name: Build summary
-        id: build_summary
+      # 构建指定版本
+      - name: Build ${{ matrix.version }}
         run: |
-          $iso = Get-Content (Resolve-Path c:/output/*.json) | ConvertFrom-Json
-          Add-Content $env:GITHUB_STEP_SUMMARY @"
-          | Property | Value |
-          | :--- | :--- |
-          | Name | $($iso.name) |
-          | Build | $($iso.build) |
-          | Checksum | $($iso.checksum) |
-          $($iso.images | ForEach-Object {"| Image Name | $($_.name) |"})
-          | Iso | [$($iso.name)]($env:artifact_url) |
-          | UUP dump | [$($iso.title)]($($iso.uupDump.downloadUrl)) |
-          "@
-          # Save the GITHUB_STEP_SUMMARY contents to a file
-          (Get-Content $env:GITHUB_STEP_SUMMARY) | Set-Content summary.md
-          echo "build=$($iso.build)" >> $env:GITHUB_ENV
-          echo "name=$($iso.name)" >> $env:GITHUB_ENV
-          echo "title=$($iso.title)" >> $env:GITHUB_ENV
-          echo "iso_name=($env:ISO_NAME)" >> $env:GITHUB_ENV
+          $outputDir = "c:/output/${{ matrix.version }}"
+          New-Item -ItemType Directory -Path $outputDir -Force
+          switch("${{ matrix.version }}") {
+            "Windows-11-24H2"  { pwsh uup-dump-get-windows-iso.ps1 windows-11 $outputDir }
+            "Windows-10-22H2"  { pwsh uup-dump-get-windows-iso.ps1 windows-10 $outputDir }
+          }
+
+      # 显示构建后磁盘空间
+      - name: Show available disk space after build (${{ matrix.version }})
+        run: Get-PSDrive -PSProvider FileSystem
+
+  upload-and-release:
+    runs-on: windows-2022
+    needs: build-windows
+    steps:
+      # 创建包含所有ISO的artifact
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-isos
+          path: c:/output/​**​/*.iso
+          retention-days: 3  # 临时保留3天
+          if-no-files-found: error
+
+      # 生成发布报告
+      - name: Generate release summary
+        run: |
+          $summaryFile = "summary.md"
+          $summaryContent = "# Windows ISO Build Report\n\n"
+          
+          # 处理每个版本
+          foreach ($dir in (Get-ChildItem -Directory c:/output)) {
+            $jsonFile = (Get-ChildItem $dir.FullName -Filter *.json | Select-Object -First 1)
+            if (!$jsonFile) { continue }
+            
+            $iso = Get-Content $jsonFile.FullName | ConvertFrom-Json
+            $isoFile = (Get-ChildItem $dir.FullName -Filter *.iso | Select-Object -First 1).FullName
+            $checksum = (Get-FileHash $isoFile -Algorithm SHA256).Hash
+            
+            $summaryContent += @"
+            ## $($dir.Name)
+            | Property | Value |
+            |----------|-------|
+            | ISO Name | $($iso.Name) |
+            | Build | $($iso.Build) |
+            | Architecture | $($iso.Architecture) |
+            | File Size | $([math]::Round((Get-Item $isoFile).Length/1GB,2)) GB |
+            | SHA256 | $checksum |
+            | UUP Dump | [View Details]($($iso.uupDump.downloadUrl)) |
+            
+            "\n\n"
+          }
+          
+          Set-Content $summaryFile -Value $summaryContent
+          Write-Host "Generated release summary"
+
+      # 创建GitHub Release
       - name: Create Release
-        id: create_release
         uses: softprops/action-gh-release@v2.3.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: "v${{ env.build }}"
-          name: "${{ inputs.versions }} Pro (${{ env.build }})"
+          tag_name: "build-${{ github.run_id }}"
+          name: "Windows ISOs - ${{ github.run_number }}"
           body_path: summary.md
+          files: |
+            c:/output/​**​/*.iso
           draft: false
           prerelease: false
