--- a/.github/workflows/build-W10.yml
+++ b/.github/workflows/build-W10.yml
@@ -1,20 +1,79 @@
-name: Windows 10 22H2
-run-name: Build Windows 11 24H2
+name: build-w10-22h2
+run-name: Build Windows 11 24H2 ${{ inputs.edition }} ${{ inputs.language }}
 
 on:
-  schedule:
-    - cron: '0 19 * * *'  # 每天UTC 19:00 (北京时间次日03:00)
-  workflow_dispatch:  # 保留手动触发功能
+  workflow_dispatch:
     inputs:
-      versions:
-        description: "Windows version to build"
+      edition:
+        description: "Windows edition to build"
         type: choice
         options:
-          - Windows 11 24H2
-          - Windows 11 23H2
-          - Windows 10 22H2
-        default: Windows 10 22H2
+        - Pro
+        - Home
+        - Multi
+        default: Pro
         required: true
+      language:
+        description: "Language to add"
+        type: choice
+        options:
+        - ar-sa
+        - bg-bg
+        - cs-cz
+        - da-dk
+        - de-de
+        - el-gr
+        - en-gb
+        - en-us
+        - es-es
+        - es-mx
+        - et-ee
+        - fi-fi
+        - fr-ca
+        - fr-fr
+        - he-il
+        - hr-hr
+        - hu-hu
+        - it-it
+        - ja-jp
+        - ko-kr
+        - lt-lt
+        - lv-lv
+        - nb-no
+        - nl-nl
+        - pl-pl
+        - pt-br
+        - pt-pt
+        - ro-ro
+        - ru-ru
+        - sk-sk
+        - sl-si
+        - sr-latn-rs
+        - sv-se
+        - th-th
+        - tr-tr
+        - uk-ua
+        - zh-cn
+        - zh-tw
+        default: zh-cn
+        required: true
+      esd:
+        description: "Use ESD compression"
+        type: boolean
+        required: true
+        default: true
+      drivers:
+        description: "Add additional drivers"
+        type: boolean
+        required: true
+        default: true
+      netfx3:
+        description: "Add .NET Framework 3.5"
+        type: boolean
+        required: true
+        default: true
+  schedule:
+    - cron: '0 19 * * *'  # 北京时间凌晨3点（UTC时间19点）
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -28,11 +87,24 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Show available disk space before build
-        run: Get-PSDrive -PSProvider FileSystem
+        run: |
+          Get-PSDrive -PSProvider FileSystem
+          echo "options=" >> $env:GITHUB_ENV
 
-      # 固定构建 Windows 11 24H2
+      - name: Enable ESD
+        if: ${{ inputs.esd }}
+        run: echo "options=${{ env.options }} -esd" >> $env:GITHUB_ENV
+
+      - name: Enable additional drivers
+        if: ${{ inputs.drivers }}
+        run: echo "options=${{ env.options }} -drivers" >> $env:GITHUB_ENV
+
+      - name: Enable .NET Framework 3.5
+        if: ${{ inputs.netfx3 }}
+        run: echo "options=${{ env.options }} -netfx3" >> $env:GITHUB_ENV
+
       - name: Build Windows 11 24H2
-        run: pwsh uup-dump-get-windows-iso.ps1 windows-11 c:/output
+        run: pwsh uup-dump-get-windows-iso.ps1 windows-11 c:/output -edition ${{ inputs.edition }} -lang ${{ inputs.language }} ${{ env.options }}
 
       - name: Show available disk space after build
         run: Get-PSDrive -PSProvider FileSystem
@@ -46,33 +118,55 @@ jobs:
           if-no-files-found: error 
       
       - name: Set artifact_url
+        id: set_artifact_url
         run: echo "artifact_url=${{ steps.upload_artifact.outputs.artifact-url }}" >> $env:GITHUB_ENV
         
       - name: Build summary
+        id: build_summary
         run: |
-          $iso = Get-ChildItem c:/output/*.json | Select-Object -First 1 | Get-Content | ConvertFrom-Json
+          $iso = Get-Content (Resolve-Path c:/output/*.json) | ConvertFrom-Json
+          $imageNames = $iso.images | ForEach-Object { $_.name }
+          if ($imageNames.Count -gt 1) {
+            if ($imageNames[0] -match '^(Windows (10|11))\s*(.*)') {
+              $prefix = $matches[1]
+              $first = $imageNames[0]
+              $rest = $imageNames[1..($imageNames.Count - 1)] | ForEach-Object { ($_ -replace "^$prefix\s*", '') }
+              $finalImageName = $first + '/' + ($rest -join '/')
+            } else {
+              $finalImageName = $imageNames -join '/'
+            }
+          } elseif ($imageNames.Count -eq 1) {
+            $finalImageName = $imageNames[0]
+          } else {
+            $finalImageName = ''
+          }
+
           Add-Content $env:GITHUB_STEP_SUMMARY @"
           | Property | Value |
           | :--- | :--- |
-          | Name | $($iso.name) |
+          | Name | $($finalImageName) ${{ env.version }} |
           | Build | $($iso.build) |
           | Checksum | $($iso.checksum) |
-          $($iso.images | ForEach-Object {"| Image Name | $($_.name) |"})
-          | Iso | [$($iso.name)]($env:artifact_url) |
+          | Image Name | $finalImageName |
+          | Iso | [$env:ISO_NAME]($env:artifact_url) |
           | UUP dump | [$($iso.title)]($($iso.uupDump.downloadUrl)) |
           "@
+          (Get-Content $env:GITHUB_STEP_SUMMARY) | Set-Content summary.md
           echo "build=$($iso.build)" >> $env:GITHUB_ENV
+          echo "version=$($iso.version)" >> $env:GITHUB_ENV
           echo "name=$($iso.name)" >> $env:GITHUB_ENV
           echo "title=$($iso.title)" >> $env:GITHUB_ENV
-          echo "iso_name=$($iso.name.replace(' ','_'))_$($iso.build).iso" >> $env:GITHUB_ENV
-
+          echo "images=$($finalImageName)" >> $env:GITHUB_ENV
+          echo "RUN_NAME=$($finalImageName) $($iso.version) ($($iso.build))" >> $GITHUB_ENV
+      
       - name: Create Release
+        id: create_release
         uses: softprops/action-gh-release@v2.3.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: "v${{ env.build }}"
-          name: "Windows 11 24H2 Pro (${{ env.build }})"
-          body_path: ${{ env.GITHUB_STEP_SUMMARY }}
+          name: "${{ env.images }} ${{ env.version }} (${{ env.build }})"
+          body_path: summary.md
           draft: false
           prerelease: false
